welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: only classes can have declared but undefined members
  def fonctionTest() : Boolean
      ^