welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  def fonctionTest() : Boolean
}